Add jsp for creation room

--- a/src/web/index.html
+++ b/src/web/index.html
@@ -7,6 +7,6 @@
 <body>
 <h1>Приложение комнаты</h1>
 <p><a href="room/list.html">Список комнат</a></p>
-<p><a href="/room/edit.html">Добавить комнату</a></p>
+<p><a href="room/create.html">Добавить комнату</a></p>
 </body>
 </html>
